# wget-cli

./: .gitignore  CMakeLists.txt  GET  Makefile  README.md  con_args.cpp  con_args.h  crawler.cpp  crawler.h  header.h  log.txt  main.cpp  parse_html.cpp  sites.txt  start.sh  web-cli
wget/: con_args.cpp  crawler.cpp  crawler.h  header.h  main.cpp  parse_html.cpp  sockets.cpp  urls.cpp
